ToDO class componen

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,169 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* App.css */
+
+.app {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  background-color: gray;
+  border: #21a1f1 20px solid;
+}
+
+.title {
+  color: goldenrod;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.searchResult {
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  padding: 20px;
+  flex-grow: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.form {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.card {
-  padding: 2em;
+.input {
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
 }
 
-.read-the-docs {
-  color: #888;
+.submitButton {
+  padding: 10px 20px;
+  background-color: #9efb61;
+  color: #212020;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.submitButton:hover {
+  background-color: #21f13d;
+}
+
+.error {
+  color: red;
+  font-style: italic;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+ 
+ 
+}
+
+.itemContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 15px;
+  padding: 15px;
+}
+
+
+.deleteButton {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #ff4d4d;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+}
+
+.deleteButton:hover {
+  background-color: #f4a536;
+}
+
+.updateButton {
+  margin-top: 10px;
+  margin-left: 10px;
+  padding: 5px 10px ;
+  background-color: #4caf50;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+}
+
+.updateButton:hover {
+  background-color: #45a082;
+}
+
+.updateForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.saveButton {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #61dafb;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+}
+
+.noItems {
+  color: blue;
+  font-style: italic;
+  background-color: #ddd;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.toggleButton {
+  margin-right: 10px;
+  padding: 10px 20px;
+  background-color: #31c2ea;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.toggleButton:hover {
+  background-color: #21a1f1;
+}
+
+.createButton {
+  padding: 10px 20px;
+  background-color: #a3af4c;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 20px;
+  color: white;
+}
+
+.createButton:hover {
+  background-color: #61e428;
+}
+
+/* item */
+.item {
+  padding: 12px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin: 8px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
